# aoi360-eye-tracking-system

./: .gitignore  .gitmodules  .zenodo.json  CITATION.cff  Launch_AOI360_Preprocess_GUI.bat  README.md
data/experiment/: runtime_config.json
data/promts/: 3videosPromt.json  5videosPromt.json
docs/architecture/: overview.md  system_architecture_overview_base.md
docs/latex/: bibliografia.bib  main.tex
docs/phase0/: README.md  aoi-data-contract.md  runtime-unity.md  validation-checklist.md
docs/phase2/: README.md  aoi-data-contract.md  csv-schema.md  runtime-unity.md  validation-checklist.md  windows-build-refresh-runbook.md
docs/pilot_latex/: README.md  consentimiento_piloto.tex  plantilla_operativa_piloto.tex
python/analytics/: README.md  pyproject.toml
python/analytics/scripts/: analyze_runtime_exports.py  build_phase3_stimulus_aoi_tables.py  build_runtime_aoi_html_report.py  compare_runtime_aoi_sources.py  normalize_runtime_participant_ids.py
python/analytics/src/aoi360_analytics/: __init__.py  cli.py  comparison_cli.py  runtime_exports.py  source_comparison.py
python/analytics/tests/: test_runtime_exports.py  test_source_comparison.py
python/offline/: README.md  pyproject.toml  requirements.txt
python/offline/scripts/: annotate_manual_boxes_opencv.py  benchmark_detectors.py  detect_owlv2.py  detect_yolo_world.py  diagnose_failure_taxonomy.py  prefetch_detector_assets.py  verify_spatial_iou.py
python/offline/src/aoi360_pipeline/: __init__.py  aoi_map_builder.py  aoi_map_sequence_builder.py  benchmark_detectors.py  cache_roots.py  detection_contract.py  detectors.py  failure_taxonomy_diagnostics.py  frame_extraction.py  grounding_dino.py  opencv_manual_box_annotator.py  owlv2.py  prefetch_detector_assets.py  preprocess_gui.py  rebuild_runtime_assets.py  runtime_environment.py  spatial_iou_validation.py  yolo_world.py
(+45 files in other folders)
