[project]
name = "aoi360-pipeline"
version = "0.1.0"
description = "Offline AOI generation pipeline for 360 eye tracking"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate",
    "clip @ git+https://github.com/ultralytics/CLIP.git",
    "numpy",
    "opencv-python",
    "pandas",
    "pillow",
    "torch",
    "torchvision",
    "tqdm",
    "transformers",
    "ultralytics",
]

[project.scripts]
aoi360-extract-frames = "aoi360_pipeline.frame_extraction:main"
aoi360-detect-grounding-dino = "aoi360_pipeline.grounding_dino:main"
aoi360-detect-owlv2 = "aoi360_pipeline.owlv2:main"
aoi360-detect-yolo-world = "aoi360_pipeline.yolo_world:main"
aoi360-build-aoi-map = "aoi360_pipeline.aoi_map_builder:main"
aoi360-build-aoi-sequence = "aoi360_pipeline.aoi_map_sequence_builder:main"
aoi360-rebuild-runtime-assets = "aoi360_pipeline.rebuild_runtime_assets:main"
aoi360-preprocess-gui = "aoi360_pipeline.preprocess_gui:main"
aoi360-benchmark-detectors = "aoi360_pipeline.benchmark_detectors:main"
aoi360-prefetch-detector-assets = "aoi360_pipeline.prefetch_detector_assets:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
